--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Levector - Administrador de Casting, Locaciones y Utilería">
     <meta name="author" content="Levector S.A.">
     <meta name="keyword" content="Levector">
-    <title>Levector Admin</title>
+    <title>Levector HER</title>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
